# oidc-exchange

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  install.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
admin-ui/: README.md  package-lock.json  package.json
admin-ui/src/: app.d.ts  hooks.server.ts
admin-ui/src/lib/: api.ts  auth.ts  types.ts
admin-ui/src/routes/: +layout.svelte
admin-ui/src/routes/(app)/: +page.svelte
admin-ui/src/routes/login/: +page.server.ts  +page.svelte
apps/admin-ui/: package.json
apps/admin-ui/src/routes/(app)/: +layout.svelte  +page.server.ts
apps/website/: astro.config.mjs  serve.mjs
apps/website/src/components/: TokenFlow.svelte
bindings/lambda/: package.json  tsconfig.json
bindings/lambda/__tests__/: adapters.test.ts
bindings/lambda/src/: adapters.ts  index.ts  types.ts
bindings/nodejs/: Cargo.toml  index.d.ts  index.js  package.json  pnpm-lock.yaml
bindings/nodejs/__tests__/: index.test.mjs  index.test.ts
bindings/nodejs/npm/darwin-arm64/: package.json
bindings/nodejs/npm/linux-arm64-gnu/: package.json
bindings/nodejs/npm/linux-x64-gnu/: package.json
bindings/nodejs/npm/win32-x64-msvc/: package.json
bindings/nodejs/src/: lib.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/python/oidc_exchange/: __init__.py  __init__.pyi  _asgi.py  _wsgi.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_asgi.py  test_handle_request.py  test_wsgi.py
config/: default.toml
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs
crates/adapters/src/cloudtrail/: mod.rs
crates/adapters/src/dynamo/: mod.rs  schema.rs
crates/adapters/src/kms/: mod.rs
crates/adapters/src/lmdb/: mod.rs
crates/adapters/src/local_keys/: mod.rs
crates/adapters/src/noop/: mod.rs
crates/adapters/src/oidc/: mod.rs
crates/adapters/src/postgres/: mod.rs
crates/adapters/src/shared/: discovery.rs  jwks.rs  mod.rs  token_endpoint.rs
crates/adapters/src/sqlite/: mod.rs
crates/adapters/src/sqs_audit/: mod.rs
crates/adapters/src/stdout_audit/: mod.rs
crates/adapters/src/valkey/: mod.rs
crates/adapters/src/webhook/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs
crates/core/src/domain/: audit.rs  mod.rs  provider.rs  session.rs  token.rs  user.rs
crates/core/src/ports/: audit.rs  identity_provider.rs  key_manager.rs  mod.rs  repository.rs  user_sync.rs
crates/core/src/service/: claims.rs  exchange.rs  mod.rs  refresh.rs  revoke.rs  user_admin.rs
crates/core/tests/: audit.rs  claims.rs  cleanup.rs  exchange.rs  refresh.rs  revoke.rs  user_admin.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
crates/ffi/tests/: integration.rs
crates/providers/: Cargo.toml
crates/providers/src/: apple.rs
crates/server/: Cargo.toml
crates/server/src/: bootstrap.rs  error.rs  lib.rs  main.rs  state.rs  telemetry.rs
crates/server/src/middleware/: audit_context.rs  error_handler.rs  internal_auth.rs  mod.rs  request_id.rs
crates/server/src/routes/: health.rs  internal.rs  keys.rs  mod.rs  revoke.rs  token.rs  well_known.rs
crates/server/tests/: e2e.rs  internal.rs  routes.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
docs/: contributing.md  index.mdx  integration-guide.md
docs/architecture/: overview.md
docs/getting-started/: installation.md  quick-start.md
docs/guides/: docker.md  nodejs.md  python.md
docs/integration/: README.md  aws-lambda.md  container.md  ecs-fargate.md  linux-postgres.md  linux-server.md  linux-sqlite.md
docs/superpowers/plans/: 2026-03-24-aws-web-example-plan.md  2026-03-24-oidc-exchange-plan.md  2026-03-27-service-roles-admin-ui-plan.md  2026-04-02-code-review-fixes.md  2026-04-02-distribution-and-bindings.md
docs/superpowers/specs/: 2026-03-24-aws-web-example-design.md  2026-03-24-oidc-exchange-design.md  2026-03-27-service-roles-admin-ui-design.md  2026-04-02-distribution-and-bindings-design.md
examples/aws-web/: README.md  package-lock.json  package.json
examples/aws-web/config/: oidc-exchange.toml
examples/aws-web/demo-app/: bundle.sh  package.json  svelte.config.js
examples/aws-web/demo-app/src/: app.d.ts  app.html
examples/aws-web/infra/: cdk.json  package.json  tsconfig.json
examples/aws-web/infra/lib/: stack.ts
examples/container/: Dockerfile  README.md  docker-compose.yml
examples/container/config/: production.toml
examples/container/k8s/: deployment.yml  namespace.yml  secrets.yml  service.yml
examples/ecs-fargate/: Dockerfile  README.md
examples/ecs-fargate/config/: fargate.toml
examples/ecs-fargate/infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
examples/linux-postgres/: README.md  docker-compose.valkey.yml  docker-compose.yml  init.sql
examples/linux-postgres/config/: postgres-only.toml  postgres-valkey.toml
examples/linux-sqlite/: README.md  setup.sh
examples/linux-sqlite/config/: sqlite-lmdb.toml  sqlite-only.toml
examples/nodejs/express/: README.md  index.js  index.ts  package.json
examples/nodejs/fastify/: README.md  index.js  index.ts  package.json
examples/nodejs/hono/: README.md  index.ts  package.json
examples/nodejs/lambda/: README.md  handler.ts  package.json
examples/nodejs/nextjs/: README.md  package.json
examples/nodejs/serverless/: README.md  handler.js  handler.ts  package.json  serverless.yml
examples/nodejs/sveltekit/: README.md  package.json
examples/nodejs/sveltekit/src/: hooks.server.ts
examples/python/: config.toml
examples/python/django/: README.md  requirements.txt
examples/python/django/myproject/: settings.py  urls.py
examples/python/fastapi/: README.md  main.py  requirements.txt
examples/python/flask/: README.md  app.py  requirements.txt
schemas/: datamodel.schema.json
schemas/dynamodb/: table-design.json
website/: astro.config.mjs  package-lock.json  package.json
website/integrations/: markdown-api.js  markdown-api.ts
website/src/: middleware-markdown.ts
(+35 files in other folders)
