[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "oidc-exchange"
version = "0.1.0"
description = "Python bindings for oidc-exchange - OIDC token exchange service"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "oidc_exchange._oidc_exchange"
