[package]
name = "oidc-exchange-adapters"
version.workspace = true
edition.workspace = true

[dependencies]
oidc-exchange-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest = { version = "0.12", features = ["json"] }
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8", "pem"] }
jsonwebtoken = "9"
base64.workspace = true

[dev-dependencies]
oidc-exchange-test-utils.workspace = true
wiremock = "0.6"
tempfile = "3"
rand.workspace = true
rsa = "0.9"
