[package]
name = "oidc-exchange-adapters"
version.workspace = true
edition.workspace = true

[dependencies]
oidc-exchange-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest = { version = "0.13", features = ["json", "form"] }
ed25519-dalek = { version = "3.0.0-pre.6", features = ["rand_core", "pkcs8", "pem"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
base64.workspace = true
aws-sdk-dynamodb = "1"
aws-sdk-kms = "1"
rsa = "0.10.0-rc.1"
p256 = { version = "0.14.0-rc.8", features = ["ecdsa"] }
p384 = "0.14.0-rc.1"
aws-sdk-sqs = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
hmac = "0.12"
sha2 = "0.10"
heed = "0.22"
hex.workspace = true
ulid.workspace = true
chrono.workspace = true
fred = { version = "10", features = ["serde-json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "chrono", "json"] }

[dev-dependencies]
oidc-exchange-test-utils.workspace = true
wiremock = "0.6"
tempfile = "3"
rand.workspace = true
rsa = "0.10.0-rc.1"
