[package]
name = "oidc-exchange-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono.workspace = true
tracing.workspace = true
ulid.workspace = true
base64.workspace = true
sha2.workspace = true
rand.workspace = true
hex.workspace = true
toml.workspace = true

[dev-dependencies]
tokio.workspace = true
oidc-exchange-test-utils.workspace = true
base64.workspace = true
sha2.workspace = true
hex.workspace = true
serde_json.workspace = true
chrono.workspace = true
