[package]
name = "oidc-exchange-providers"
version.workspace = true
edition.workspace = true

[dependencies]
oidc-exchange-core.workspace = true
oidc-exchange-adapters.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest = { version = "0.13", features = ["json", "form"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
p256 = { version = "0.14.0-rc.8", features = ["ecdsa", "pem"] }
base64.workspace = true
chrono.workspace = true
toml.workspace = true

[dev-dependencies]
oidc-exchange-test-utils.workspace = true
wiremock = "0.6"
rand.workspace = true
