[package]
name = "oidc-exchange"
version.workspace = true
edition.workspace = true

[dependencies]
oidc-exchange-core.workspace = true
oidc-exchange-adapters.workspace = true
oidc-exchange-providers.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum = "0.8"
subtle = "2"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id", "catch-panic"] }
toml = "1.1"
config = "0.15"
uuid = { version = "1", features = ["v4"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
aws-sdk-kms = "1"
aws-sdk-sqs = "1"
futures = "0.3"

[dev-dependencies]
oidc-exchange-test-utils.workspace = true
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tokio = { workspace = true, features = ["full"] }
base64.workspace = true
