[package]
name = "oidc-exchange-test-utils"
version.workspace = true
edition.workspace = true

[dependencies]
oidc-exchange-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
chrono.workspace = true
ulid.workspace = true
base64.workspace = true
ed25519-dalek = { version = "3.0.0-pre.6", features = ["rand_core"] }
